tests/valid/function/mixed_forall_fn_value_pass_and_call.facet
fn id<'a, T>(x: unrestricted &'a affine T) -> unrestricted &'a affine T {
  x
}

fn apply<'x>(
  f: unrestricted for<'a, T> fn(unrestricted &'a affine T) -> unrestricted &'a affine T,
  r: unrestricted &'x affine isize
) -> unrestricted &'x affine isize {
  (f r)
}

fn main<'x>(r: unrestricted &'x affine isize) -> unrestricted &'x affine isize {
  (apply id r)
}
