tests/invalid/borrow_error/immutable_borrow.facet
fn f(x: unrestricted isize) -> affine &mut unrestricted isize {
    (&mut x)
}
